Fix searchbox alignment

--- a/shared/components/SearchBox.less
+++ b/shared/components/SearchBox.less
@@ -81,15 +81,16 @@
 }
 
 .SearchBox__box {
-    min-width: 250px;
+    min-width: 100px;
+    box-sizing: border-box;
     width: 100%;
     background-color: @white-light;
     display: flex;
     flex-direction: row;
-    height: 40px;
+    height: 45px;
     padding: 3px 16px;
     border-radius: 3px;
-    margin: 5px;
+    margin: 0;
     align-items: center;
     transition: .3s;
     cursor: default;
